# Rockwell

./: .gitignore  Dockerfile  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
docker/: Dockerfile.test
draft/: docker-compose.yml
rockwell/backend/: Dockerfile
rockwell/backend/src/authorizer/: twauth-web.py
rockwell/frontend/: Dockerfile
