[tool.poetry]
name = "rockwell"
version = "0.1.0"
description = "Render a Twitter-like feed to track user interactions and gather information."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
amqp = "5.2.0"
annotated-types = "0.6.0"
anyio = "4.3.0"
appnope = "0.1.4"
asttokens = "2.4.1"
attrs = "24.2.0"
backcall = "0.2.0"
beautifulsoup4 = "4.12.3"
billiard = "4.2.1"
bleach = "6.1.0"
blinker = "1.8.2"
build = "1.2.1"
cachecontrol = "0.14.0"
celery = "5.4.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
crashtest = "0.4.1"
decorator = "5.1.1"
defusedxml = "0.7.1"
distlib = "0.3.8"
docopt = "0.6.2"
dulwich = "0.21.7"
executing = "2.1.0"
fastapi = "0.110.0"
fastjsonschema = "2.19.1"
filelock = "3.14.0"
flask = "3.0.3"
gunicorn = "22.0.0"
h11 = "0.14.0"
idna = "3.6"
iniconfig = "2.0.0"
installer = "0.7.0"
ipython = "8.12.3"
itsdangerous = "2.2.0"
jaraco-classes = "3.4.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
jupyterlab-pygments = "0.3.0"
keyring = "24.3.1"
kombu = "5.4.2"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.7"
mistune = "3.0.2"
more-itertools = "10.2.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
numpy = "1.26.4"
packaging = "24.0"
pandas = "2.2.1"
pandocfilters = "1.5.1"
parso = "0.8.4"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pipenv = "2023.12.1"
pipreqs = "0.5.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
pluggy = "1.5.0"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
prompt-toolkit = "3.0.47"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pycparser = "2.22"
pydantic = "2.6.4"
pydantic-core = "2.16.3"
pygments = "2.18.0"
pyproject-hooks = "1.1.0"
pytest = "8.3.3"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyzmq = "26.2.0"
rapidfuzz = "3.9.3"
redis = "5.0.8"
referencing = "0.35.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rpds-py = "0.20.0"
safetensors = "0.4.3"
scipy = "1.13.1"
setuptools = "70.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.31"
stack-data = "0.6.3"
starlette = "0.36.3"
sympy = "1.12.1"
tenacity = "8.4.1"
threadpoolctl = "3.5.0"
tinycss2 = "1.3.0"
tomlkit = "0.12.5"
tornado = "6.4.1"
tqdm = "4.66.4"
traitlets = "5.14.3"
trove-classifiers = "2024.5.22"
typing-extensions = "4.10.0"
tzdata = "2024.1"
ujson = "5.10.0"
urllib3 = "2.2.1"
uvicorn = "0.30.1"
uvicorn-worker = "0.2.0"
uvloop = "0.19.0"
vine = "5.1.0"
virtualenv = "20.26.2"
wcwidth = "0.2.13"
webencodings = "0.5.1"
websockets = "12.0"
werkzeug = "3.0.3"
wheel = "0.43.0"
xattr = "1.1.0"
yarg = "0.1.9"
zope-event = "5.0"
zope-interface = "6.4.post2"

[tool.poetry.group.dev]
optional = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
